--- a/MyConsole/MyConsole.csproj
+++ b/MyConsole/MyConsole.csproj
@@ -33,7 +33,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <StartupObject>MyConsole.TestEmployees</StartupObject>
+    <StartupObject>MyConsole.TestEmployeesMethod</StartupObject>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -50,6 +50,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestEmployees.cs" />
+    <Compile Include="TestEmployeesMethod.cs" />
     <Compile Include="TestString.cs" />
   </ItemGroup>
   <ItemGroup>
