--- a/MyConsole/MyConsole.csproj
+++ b/MyConsole/MyConsole.csproj
@@ -47,6 +47,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Models\Employees.cs" />
+    <Compile Include="Models\Sales.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestEmployees.cs" />
