--- a/MyConsole/MyConsole.csproj
+++ b/MyConsole/MyConsole.csproj
@@ -33,7 +33,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <StartupObject>MyConsole.TestSalesEmployees</StartupObject>
+    <StartupObject>MyConsole.TestPoly</StartupObject>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -47,11 +47,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Models\Employees.cs" />
+    <Compile Include="Models\Engineer.cs" />
     <Compile Include="Models\Sales.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestEmployees.cs" />
     <Compile Include="TestEmployeesMethod.cs" />
+    <Compile Include="TestPoly.cs" />
     <Compile Include="TestSalesEmployees.cs" />
     <Compile Include="TestString.cs" />
   </ItemGroup>
