--- a/MyConsole/MyConsole.csproj
+++ b/MyConsole/MyConsole.csproj
@@ -33,7 +33,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <StartupObject>MyConsole.TestMathException</StartupObject>
+    <StartupObject>MyConsole.TestMathDiv</StartupObject>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -52,12 +52,14 @@
     <Compile Include="Models\EmployeesDao.cs" />
     <Compile Include="Models\Engineer.cs" />
     <Compile Include="Models\IDao.cs" />
+    <Compile Include="Models\Math.cs" />
     <Compile Include="Models\Sales.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestEmployees.cs" />
     <Compile Include="TestEmployeesArray.cs" />
     <Compile Include="TestEmployeesMethod.cs" />
+    <Compile Include="TestMathDiv.cs" />
     <Compile Include="TestMathException.cs" />
     <Compile Include="TestPoly.cs" />
     <Compile Include="TestSalesEmployees.cs" />
