--- a/MyConsole/MyConsole.csproj
+++ b/MyConsole/MyConsole.csproj
@@ -33,7 +33,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <StartupObject>MyConsole.ReadWriteImageFile</StartupObject>
+    <StartupObject>MyConsole.TestDirectory</StartupObject>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
