--- a/MyConsole/MyConsole.csproj
+++ b/MyConsole/MyConsole.csproj
@@ -33,7 +33,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <StartupObject>MyConsole.TestDirectory</StartupObject>
+    <StartupObject>MyConsole.TestStreamRW</StartupObject>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -66,6 +66,7 @@
     <Compile Include="TestMathException.cs" />
     <Compile Include="TestPoly.cs" />
     <Compile Include="TestSalesEmployees.cs" />
+    <Compile Include="TestStreamRW.cs" />
     <Compile Include="TestString.cs" />
   </ItemGroup>
   <ItemGroup>
